RESOLVED FIXED42362
CSSSegmentedFontFace::isLoaded() const is not used anywhere
https://bugs.webkit.org/show_bug.cgi?id=42362
Summary CSSSegmentedFontFace::isLoaded() const is not used anywhere
Yuzo Fujishima
Reported 2010-07-15 05:04:38 PDT
CSSSegmentedFontFace::isLoaded() const is not used anywhere. It should be removed.
Attachments
Proposed fix (1.73 KB, patch)
2010-07-15 05:08 PDT, Yuzo Fujishima
darin: review+
Yuzo Fujishima
Comment 1 2010-07-15 05:08:41 PDT
Created attachment 61645 [details] Proposed fix
Yuzo Fujishima
Comment 2 2010-07-15 20:07:11 PDT
Note You need to log in before you can comment on or make changes to this bug.