2010-07-15  Yuzo Fujishima  <yuzo@google.com>

Reviewed by Darin Adler.

        Fix for Bug 42362 - CSSSegmentedFontFace::isLoaded() const is not used anywhere
        Remove the method.
        https://bugs.webkit.org/show_bug.cgi?id=42362

        No new tests because of no behavior changes.

        * css/CSSSegmentedFontFace.cpp:
        * css/CSSSegmentedFontFace.h:

Canonical link: https://commits.webkit.org/54350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63510 268f45cc-cd09-0410-ab3c-d52691b4dbfc